[project]
name = "lucas-chess"
version = "2.20.0.dev0"
description = "Lucas Chess is an easy way to play and train chess on your PC"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "chardet>=5.2.0",
    "chess>=1.10.0",
    "pillow>=9.5.0",
    "polib>=1.2.0",
    "psutil>=7.0.0",
    "pyside2>=5.15.2.1",
    "requests>=2.31.0",
    "sortedcontainers>=2.4.0",
]

[project.gui-scripts]
lucas-chess = "main:main"

[dependency-groups]
build = [
    "cython>=3.0.12",
    "deep-translator>=1.11.4",
]
dev = [
    "ruff>=0.12.12",
]
